2006-03-31  Gabriel Burt  <gabriel.burt@gmail.com>

	Initial import. Requires patch to core, still many bugs.